@@ -1,6 +1,7 @@
 buildscript {
   dependencies {
-    classpath("net.serenity-bdd:serenity-gradle-plugin:2.0.11")
+    classpath("net.serenity-bdd:serenity-gradle-plugin:3.6.22")
+    classpath("au.com.dius.pact:au.com.dius.pact.gradle.plugin:4.4.0-beta.1")
   }
 }
 
@@ -11,22 +12,22 @@ plugins {
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.1.0'
-  id 'org.springframework.boot' version '2.7.11'
-  id 'uk.gov.hmcts.java' version '0.12.5'
+  id 'org.springframework.boot' version '2.7.14'
+  id 'uk.gov.hmcts.java' version '0.12.43'
   id 'org.owasp.dependencycheck' version '8.2.1'
   id 'com.github.ben-manes.versions' version '0.42.0'
   id 'org.sonarqube' version '3.0'
-  id "io.freefair.lombok" version "5.3.0"
+  id "io.freefair.lombok" version "6.2.0"
   id 'org.flywaydb.flyway' version '5.2.4'
-  id "info.solidsoft.pitest" version '1.5.2'
+  id "info.solidsoft.pitest" version '1.9.0'
 }
 
 group = 'uk.gov.hmcts.reform'
 version = '0.0.1'
 
 allprojects {
-  sourceCompatibility = '11'
-  targetCompatibility = '11'
+  sourceCompatibility = '17'
+  targetCompatibility = '17'
 }
 
 sourceSets {
@@ -58,6 +59,14 @@ sourceSets {
   }
 }
 
+processFunctionalTestResources {
+  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
+processIntegrationTestResources {
+  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
 tasks.withType(JavaCompile) {
   options.compilerArgs << "-Xlint:unchecked" << "-Werror"
 }
@@ -75,10 +84,15 @@ task integration(type: Test, description: 'Runs the integration tests.', group: 
   // environment("APPINSIGHTS_INSTRUMENTATIONKEY", "test-key")
 }
 
-task smoke(type: Test) {
-  description = "Runs Smoke Tests"
+task smoke(type: Test, description: 'Runs the smoke tests.', group: 'Verification') {
   testClassesDirs = sourceSets.smokeTest.output.classesDirs
   classpath = sourceSets.smokeTest.runtimeClasspath
+}
+
+task fortifyScan(type: JavaExec, description: 'Run fortify scan.')  {
+  getMainClass().set("uk.gov.hmcts.fortifyclient.FortifyClientMainApp")
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 tasks.withType(Test) {
@@ -91,12 +105,12 @@ tasks.withType(Test) {
 
 checkstyle {
   maxWarnings = 0
-  toolVersion = '8.29'
+  toolVersion = '10.12.0'
   getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
 }
 
 pmd {
-  toolVersion = "6.18.0"
+  toolVersion = "6.41.0"
   ignoreFailures = true
   sourceSets = [sourceSets.main, sourceSets.test, sourceSets.functionalTest, sourceSets.integrationTest, sourceSets.smokeTest]
   reportsDir = file("$project.buildDir/reports/pmd")
@@ -109,9 +123,9 @@ pmd {
 jacocoTestReport {
   executionData(test, integration)
   reports {
-    xml.enabled = true
-    csv.enabled = false
-    xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
+    xml.required = true
+    csv.required = false
+    xml.getOutputLocation().set(file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml"))
   }
 }
 
@@ -129,6 +143,7 @@ sonarqube {
 project.tasks['sonarqube'].dependsOn test, integration, jacocoTestReport
 
 pitest {
+  junit5PluginVersion = '1.1.2'
   targetClasses = ['uk.gov.hmcts.reform.timedevent.*']
   excludedClasses = [
       'uk.gov.hmcts.reform.timedevent.infrastructure.config.*',
@@ -136,8 +151,10 @@ pitest {
   ]
   threads = 10
   outputFormats = ['XML', 'HTML']
-  timestampedReports = false
+  timestampedReports = true
   failWhenNoMutations = false
+  verbose = true
+  mutationThreshold = 60
 }
 
 project.tasks['pitest'].group = "Verification"
@@ -164,7 +181,7 @@ dependencyCheck {
 dependencyManagement {
   dependencies {
     // CVE-2018-10237 - Unbounded memory allocation
-    dependencySet(group: 'com.google.guava', version: '31.1-jre') {
+    dependencySet(group: 'com.google.guava', version: '32.1.2-jre') {
       entry 'guava'
     }
 
@@ -178,22 +195,22 @@ dependencyManagement {
     //CVE-2022-38750, CVE-2022-38751, CVE-2022-38752
     dependency group: 'org.yaml', name: 'snakeyaml', version: '2.0'
 
-    dependencySet(group: 'com.fasterxml.jackson.core', version: '2.15.0') {
+    dependencySet(group: 'com.fasterxml.jackson.core', version: '2.15.2') {
       entry 'jackson-databind'
       entry 'jackson-core'
       entry 'jackson-annotations'
     }
 
-    dependencySet(group: 'com.fasterxml.jackson.dataformat', version: '2.15.0') {
+    dependencySet(group: 'com.fasterxml.jackson.dataformat', version: '2.15.2') {
       entry 'jackson-dataformat-yaml'
     }
 
-    dependencySet(group: 'com.fasterxml.jackson.datatype', version: '2.15.0') {
+    dependencySet(group: 'com.fasterxml.jackson.datatype', version: '2.15.2') {
       entry 'jackson-datatype-jsr310'
       entry 'jackson-datatype-jdk8'
     }
 
-    dependencySet(group: 'com.fasterxml.jackson.module', version: '2.15.0') {
+    dependencySet(group: 'com.fasterxml.jackson.module', version: '2.15.2') {
       entry 'jackson-module-parameter-names'
       entry 'jackson-module-afterburner'
     }
@@ -211,11 +228,14 @@ repositories {
 }
 
 def versions = [
-    junit           : '5.7.0',
-    junitPlatform   : '1.7.2',
+    junit           : '5.8.2',
+    junitPlatform   : '1.8.2',
     reformLogging   : '5.1.7',
     springDoc       : '1.6.8',
-    serenity        : '3.1.20'
+    serenity        : '3.6.22',
+    sonarPitest     : '0.5',
+    pitest          : '1.9.0',
+    restAssured     : '5.3.1'
 ]
 
 ext.libraries = [
@@ -229,12 +249,30 @@ ext.libraries = [
 ]
 
 dependencies {
+  modules {
+    module("org.codehaus.groovy:groovy") {
+      replacedBy("org.apache.groovy:groovy", "conflicts in current rest-assured version")
+    }
+    module("org.codehaus.groovy:groovy-xml") {
+      replacedBy("org.apache.groovy:groovy-xml", "conflicts in current rest-assured version")
+    }
+    module("org.codehaus.groovy:groovy-json") {
+      replacedBy("org.apache.groovy:groovy-json", "conflicts in current rest-assured version")
+    }
+  }
+
+  implementation group: 'org.quartz-scheduler', name: 'quartz', version: '2.5.0-rc1'
+
+  implementation group: 'org.apiguardian', name:'apiguardian-api', version: '1.0.0'
+
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-quartz'
+  implementation(group: 'org.springframework.boot', name: 'spring-boot-starter-quartz') {
+    exclude group: 'org.quartz-scheduler', module: 'quartz'
+  }
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
 
@@ -259,9 +297,12 @@ dependencies {
   implementation group: 'com.sun.xml.bind', name: 'jaxb-osgi', version: '2.3.3'
 
   implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
-  implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
+  implementation group: 'commons-io', name: 'commons-io', version: '2.10.0'
 
   implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
+
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.80'
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.80'
 
   testImplementation libraries.junit5
 
@@ -277,7 +318,12 @@ dependencies {
   testImplementation group: 'org.awaitility', name: 'awaitility', version: '4.0.2'
   testImplementation group: 'com.h2database', name: 'h2', version: '1.4.197'
 
-  testImplementation group: 'org.pitest', name: 'pitest', version: '1.5.2'
+  testImplementation group: 'org.pitest', name: 'pitest', version: versions.pitest
+  testImplementation "info.solidsoft.gradle.pitest:gradle-pitest-plugin:${versions.pitest}"
+  testImplementation "org.codehaus.sonar-plugins:sonar-pitest-plugin:${versions.sonarPitest}"
+
+  testImplementation(group: 'io.rest-assured', name: 'rest-assured-all', version: versions.restAssured)
+  testImplementation group: 'io.rest-assured', name: 'rest-assured', version: versions.restAssured
 
   testImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
   testImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
@@ -288,14 +334,14 @@ dependencies {
     exclude group: "com.github.tomakehurst", module: "wiremock-standalone"
   }
 
-  integrationTestCompile sourceSets.main.runtimeClasspath
-  integrationTestCompile sourceSets.test.runtimeClasspath
+  integrationTestImplementation sourceSets.main.runtimeClasspath
+  integrationTestImplementation sourceSets.test.runtimeClasspath
 
-  functionalTestCompile sourceSets.main.runtimeClasspath
-  functionalTestCompile sourceSets.test.runtimeClasspath
+  functionalTestImplementation sourceSets.main.runtimeClasspath
+  functionalTestImplementation sourceSets.test.runtimeClasspath
 
-  smokeTestCompile sourceSets.main.runtimeClasspath
-  smokeTestCompile sourceSets.test.runtimeClasspath
+  smokeTestImplementation sourceSets.main.runtimeClasspath
+  smokeTestImplementation sourceSets.test.runtimeClasspath
 
 }
 
